Changes go downward, months go upward.  Please scroll to the bottom for a legend.
Changelog started January 1, 2004; Currently at $Revision: 10062 $.

SMF 2.0                                                                      ???
================================================================================
August 2010
--------------------------------------------------------------------------------
 * The new replies template for preview JavaScript was using outdated post layout. (Post.template.php) [Bug 4387]
 * "new" images for new replies inserted by JavaScript were not removed once the post is no longer unread. (Post.template.php) [Bug 4397]
 ! PM ignore settings were ignored. (Subs-Post.php) [Bug 4401]
 ! File counts for attachment directories were counted wrongfully. (ManageAttachments.php) [Bug 4381]
 ! Unnecessary logouts following password conversion. (LogInOut.php) [Bug 4365]
 ! Missing sub template caused premature termination of the script instead of displaying error. (Errors.php, Subs.php) [Bug 4402]
 ! Approvals by quick moderation were not logged properly. (MessageIndex.php)
 * Got the last of th smalltext in (MessageIndex.template.php)
 * Applied "fix" to (Stats.template.php) [Bug 4403]
 * Fixed submit button bug in (PersonalMessage.template.php)
 ! It was possible to use custom e-mail functionality even when e-mail address was not found. (SendTopic.php)
 * E-mail icon was displayed for guests who did not have e-mail address information. (Display template, PersonalMessage template) [Bug 4362]
 & Incorrect last login date for recent watched members who never logged in. (ModerationCenter.php, ModerationCenter template, ModerationCenter language) [Bug 4406]
 * Incosistency in handling color of erroneous field captions between PHP and JavaScript. (Post template, Xml template) [Bug 4343]
 ! Passing an incorrect pm id on conversation mode could cause errors in the log. (PersonalMessage.php)