@@ -199,7 +199,7 @@ function EditHoliday()
 		checkSession();
 
 		// Not too long good sir?
-		$_REQUEST['title'] = substr($_REQUEST['title'], 0, 60);
+		$_REQUEST['title'] =  $smcFunc['substr']($_REQUEST['title'], 0, 60);
 		$_REQUEST['holiday'] = isset($_REQUEST['holiday']) ? (int) $_REQUEST['holiday'] : 0;
 
 		if (isset($_REQUEST['delete']))
