@@ -133,7 +133,7 @@ function BrowseMailQueue()
 				),
 				'data' => array(
 					'function' => create_function('$rowData', '
-						return strlen($rowData[\'subject\']) > 50 ? sprintf(\'%1$s...\', substr(htmlspecialchars($rowData[\'subject\']), 0, 47)) : htmlspecialchars($rowData[\'subject\']);
+						return $smcFunc[\'strlen\']($rowData[\'subject\']) > 50 ? sprintf(\'%1$s...\', htmlspecialchars($smcFunc[\'substr\']($rowData[\'subject\']), 0, 47)) : htmlspecialchars($rowData[\'subject\']);
 					'),
 					'class' => 'smalltext',
 				),
